@@ -29,6 +29,8 @@
 
 #include <sys/types.h>
 
+@FALLBACK_SOCKLEN_T@
+
 #if defined _WIN32 || defined __WIN32__
 # include <winsock2.h>
 # include <ws2tcpip.h>
