@@ -1,3 +1,7 @@
+2006-10-10  Marcus Brinkmann  <marcus@g10code.de>
+
+	* fallback.m4: New file from Pth.
+
 2006-07-04  Marcus Brinkmann  <marcus@g10code.de>
 
 	* sys_socket_h.m4, socklen.m4, onceonly.m4: New files from gnulib.
