@@ -1,3 +1,9 @@
+2006-10-10  Marcus Brinkmann  <marcus@g10code.de>
+
+	* gcrypt.h: Add fallback type for socklen_t.  Move to ...
+	* gcrypt.h.in: ... this file.
+	* Makefile.am (EXTRA_DIST): Add gcrypt.h.in.
+
 2006-08-29  Werner Koch  <wk@g10code.com>
 
 	* gcrypt.h (GCRY_CIPHER_SEED): New.
